--- a/src/App.css
+++ b/src/App.css
@@ -160,3 +160,25 @@
   height: 80px;
   width: auto;
 }
+
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 500px;
+  margin: 80px;
+}
+
+.svg-border {
+  position: absolute;
+}
+
+.neon {
+  filter: url(#neon);
+}
+
+body {
+  background-color: #0a0a0a;
+  color: white;
+}
