--- a/src/App.css
+++ b/src/App.css
@@ -10,19 +10,6 @@
   overflow: visible;
 }
 
-.fut-background {
-  /* background-image: url('/fut-bg.png'); */
-  background-image: url('fut-bg.png');
-
-  background-size: cover;
-  background-position: center;
-  width: 800px;
-  height: 250px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-}
 
 .app {
   overflow: visible;
@@ -31,7 +18,7 @@
 .trapezoid {
   position: relative;
   overflow: visible;
-  background-image: url('fut-bg.png');
+  background-image: url('/fut-bg.png');
   background-size: cover;
   background-position: center;
   clip-path: polygon(0 0, 100% 0, 95% 100%, 5% 100%);
