--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
 .trapezoid {
   position: relative;
   overflow: visible;
-  background-image: url('/fut-bg.png');
+  /* background-image: url('/fut-bg.png'); */
   background-size: cover;
   background-position: center;
   clip-path: polygon(0 0, 100% 0, 95% 100%, 5% 100%);
@@ -105,6 +105,7 @@
   flex-direction: row;
   align-items: center;
   gap: 20px;
+  -webkit-text-stroke: 2px black;
 }
 
 .label {
